error corrected on review page footer and menu restyled to be center aligned and clickable across full width

--- a/style.css
+++ b/style.css
@@ -166,6 +166,12 @@ nav {
 
 .menu li {
   border-bottom: solid 1px black;
+  text-align: center;
+}
+
+.menuLink {
+  display: inline-block;
+  width: 100%;
 }
 
 /* Hero Image */
